--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "pactum": "^3.4.1",
     "prettier": "^2.8.8",
     "prisma": "^5.0.0",
+    "prisma-generator-fake-data": "^0.9.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
