--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,28 @@
-version: '3.5'
+version: '3.8'
 
 services:
-  db:
+  database:
     image: postgres:alpine
     restart: always
-    environment:
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-    container_name: postgres
+    env_file:
+      - .env
+    container_name: db
     volumes:
       - ./pgdata:/var/lib/postgresql/data
     ports:
-      - '5434:5432'
+      - '5432:5432'
 
   app:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: single-service-be
-    environment:
-      - PORT=${PORT}
+    container_name: single-service-api
+    restart: on-failure
+    env_file:
+      - .env
     ports:
-      - '3000:3000'
+      - '${PORT}:${PORT}'
     depends_on:
-      - db
+      - database
     volumes:
       - ./src:/app/src
