feat: minor fix

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ PORT=8080
 NODE_ENV=production
 CORS_WHITELIST=https://ohl-fe.vercel.app
 PORT=8080
-DATABASE_URL="postgresql://postgres:diziassyafadi23@database:5432/singleservicedb?schema=public"
+DATABASE_URL="postgresql://postgres:nTldNpB20qXXnlCuU732@containers-us-west-183.railway.app:6212/railway/singleservicedb?schema=public"
 DATABASE_HOST="database"
 DATABASE_USER="postgres"
 POSTGRES_PASSWORD="diziassyafadi23"
